--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ home/__pycache__
 post/__pycache__
 home/migrations/__pycache__
 post/migrations/__pycache__
+django_blog/settings/__pycache__
 
 .DS_Store
 
